--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -46,7 +46,7 @@
 
                 </nav>
 
-                <ul class="main-nav ">
+                <!-- <ul class="main-nav ">
                     <li class="login-link">
                         <a href="about.html">Who we are </a>
 
@@ -77,12 +77,12 @@
                     <li class="login-link">
                         <a href="login.html">Login </a>
                     </li>
-                </ul>
+                </ul> -->
             </div>
 
              <ul class="nav header-navbar-rht">
                 <li class="nav-item">
-                    <a class="nav-link btn-grad" href="login.html">BOOK
+                    <a class="nav-link btn-grad" href="javascript:void(0);" (click) = "navigateHeader('/online-consultation?limit=10&skip=0')">BOOK
                         AN APPOINTMENT </a>
                 </li>
 
