--- a/src/app/module/index/index.component.html
+++ b/src/app/module/index/index.component.html
@@ -236,7 +236,7 @@
                                     <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
                                         <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Dental Emergencies</a>
                                         <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Dental Online Check up</a>
-                                        <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">Treatment Consultation</a>
+                                        <!-- <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">Treatment Consultation</a> -->
                                         <a class="nav-item nav-link" id="nav-about-tab" data-toggle="tab" href="#nav-about" role="tab" aria-controls="nav-about" aria-selected="false">Child Care</a>
                                         <a class="nav-item nav-link" id="nav-about-tab" data-toggle="tab" href="#nav-second" role="tab" aria-controls="nav-second" aria-selected="false">Second Opinion</a>
   
@@ -258,7 +258,7 @@
                                                 <h3 class="grad-text">Dental Emergencies </h3>
                                                 <p>Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
                                                 <p>Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-                                                <a href="#" class="btn btn-info">Book now </a>
+                                                <a routerLink="/online-consultation" [queryParams]="{limit: 10, skip: 0 }" class="btn btn-info">Book now </a>
                                             </div>
   
                                         </div>
@@ -351,7 +351,7 @@
   
   
                 <!-- find a clinic -->
-                <section class="section section-lg section-xl-custom contact-us">
+                <!-- <section class="section section-lg section-xl-custom contact-us">
                     <div class="container">
   
                         <div class="row">
@@ -416,7 +416,7 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </section> -->
   
                 <!-- /find a clinic -->
   
